2008-07-26  Les Harris  <me@lesharris.com>

	* configure.ac: Changed to load gconf macros before
	checking for the tool.  Added test to check for 
	gconftool-2 presence.

	* Makefile.am: Changed schema installation to use
	GCONF_SCHEMA_FILE_DIR.

	* src/Makefile.am: Removed gamesdir path setting,
	switched to bin_PROGRAMS to let autotools do its
	job.

2008-07-26  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Don't use GNOME_DOC_INIT, we have no docs.

2008-07-24  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Release GNOME-Mud 0.11.

2008-07-24  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.11.

	* README, gnome-mud.lsm.in, src/mud-window.c: Update website
	references to point at our wiki page at
	http://live.gnome.org/GnomeMud.

	* ROADMAP: Replace content with a link to wiki.

2008-07-23  Les Harris  <me@lesharris.com>

	* gnome-mud.spec.in: Updated dependencies, package
	information.

2008-07-19  Les Harris  <me@lesharris.com>

	* src/mud-connection-view.c: Explicitly set VTE
	to use xterm emulation.

	* src/mud-telnet.c: Removed unused #define.

2008-07-18  Les Harris  <me@lesharris.com>

	* src/mud-window.c: Updated window background
	icon and aboutbox icon to use the default
	gtk icon theme.

2008-07-18  Les Harris  <me@lesharris.com>

	* src/mud-tray.c: Set the icon name for all
	tray states to gnome-mud to prevent some harmless
	Gtk-CRITICAL's from showing up at runtime.

2008-07-18  Les Harris  <me@lesharris.com>

	* configure.ac: Updated icon Makefiles, removed obsolete
	header and function checks.

	* src/Makefile.am: Added gnome-mud-icons.h.

	* src/gnome-mud-icons.h: A new header which holds a
	definition of our icon's name.

	* src/gnome-mud.c: Properly set our icon based on our
	icon name rather than pointing to a file. Removed
	obsolete python code.

	* src/mud-tray.c: Removed references to our connection
	status icons, properly set our tray icon based on our
	icon name.
